--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section class="conteudo-principal">
+        <h2 class="titulo-principal">Meus objetivos do ano<span>_</span></h2>
+        <div class="conteudo">
+            <div class="botoes">
+                <button class="botao ativo">data do meu aniversario</button>
+                <button class="botao">data do aniversario da isa</button>
+                <button class="botao">data do aniversario do kevin</button>
+                <button class="botao">data do aniversario do alemida</button>
+            </div>
     <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
