--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <button class="botao ativo">data do meu aniversario</button>
                 <button class="botao">data do aniversario da isa</button>
                 <button class="botao">data do aniversario do kevin</button>
-                <button class="botao">data do aniversario do almeidada</button>
+                <button class="botao">data do aniversario do almeida</button>
             </div>
     <script type="text/javascript" src="main.js"></script>
 </body>
