--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
 <body>
     <section class="conteudo-principal">
         <h2 class="titulo-principal">Meus objetivos do ano<span>_</span></h2>
-        <div class="conteudo">
             <div class="botoes">
                 <button class="botao ativo">data do meu aniversario</button>
-                <button class="botao">data do aniversario da isa</button>
-                <button class="botao">data do aniversario do kevin</button>
-                <button class="botao">data do aniversario do almeida</button>
+                <button class="botao ativo">data do aniversario da isa</button>
+                <button class="botao ativo">data do aniversario do kevin</button>
+                <button class="botao ativo">data do aniversario do almeida</button>
             </div>
+            <div class="abas textos">
+                
+            </div>
+    </section>
     <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
