--- a/index.html
+++ b/index.html
@@ -16,7 +16,19 @@
                 <button class="botao ativo">data do aniversario do almeida</button>
             </div>
             <div class="abas textos">
-                
+             <div class="abas-conteudo">
+                <h3 class="abas-conteudo-titulo-principal">cumprir o objetivo 01</h3>
+                <h4 class="abas-conteudo-titulo-secundario">tempo para cumprir o objetivo 01</h4>
+             </div>
+             <div class="abas-conteudo">
+                <h3 class="abas-conteudo-titulo-principal">cumprir o objetivo 02</h3>
+                <h4 class="abas-conteudo-titulo-secundario">tempo para cumprir o objetivo 02</h4>
+             </div>
+             <div class="abas-conteudo">
+                <h3 class="abas-conteudo-titulo-principal">cumprir o objetivo 03</h3>
+                <h4 class="abas-conteudo-titulo-secundario">tempo para cumprir o objetivo 03</h4>
+             </div>
+
             </div>
     </section>
     <script type="text/javascript" src="main.js"></script>
